fix: change sheetContent to dvh instead of min-h-screen
Added env(safe-area-inset-*) to prevent content from being cut off by non rectangular displays.

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --safe-area-top: env(safe-area-inset-top);
+  --safe-area-bottom: env(safe-area-inset-bottom);
+  --safe-area-left: env(safe-area-inset-left);
+  --safe-area-right: env(safe-area-inset-right);
+}
+
+.pb-safe {
+  padding-bottom: var(--safe-area-bottom);
+}
+
+.safe-area-bottom {
+  margin-bottom: var(--safe-area-bottom);
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
